# BioVAE_Phenotyper

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
checkpoints/: biovae_bloodmnist.pth
notebooks/: exploration.ipynb
src/: __init__.py  model_pytorch.py  utils_jax.py
tests/: test_models.py
