[project]
name = "bio-vae-phenotyper"
version = "0.1.0"
description = "Unspervised Cell phenotyping pipeline using PyTorch and familiarization with JAX"
authors = [
    {name = "JikaelN",email = "jikael.nt@outlook.com"}
]
requires-python = "^3.12.6"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
