[tool.poetry]
package-mode = false
name = "bio-vae-phenotyper"
version = "0.1.0"
description = "Unsupervised Cell phenotyping pipeline using PyTorch and JAX"
authors = ["JikaelN <jikael.nt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
jax = ">=0.4.0"
jaxlib = ">=0.4.0"
numpy = "^1.24"
pandas = "^2.0"
matplotlib = "^3.7"
seaborn = "^0.13.0"
scikit-learn = "^1.3"
tqdm = "^4.66"
medmnist = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"